namespace.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: my-namespace

apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: my-namespace
spec:
  containers:
  - name: my-container
    image: my-image
