service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: rudra06
# spec:  
#   type: Nodeport
#   selector:
#     app: rudra0006
#   ports:
#   - porotocol: TCP
#     port: 80
#     targetport: 8000
#     nodeport: 31516

apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
spec:
  type: NodePort
  selector:
    app: simple-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    nodePort: 31516
